Add tools.splat.soy to update list

--- a/.github/workflows/update-downstream.yml
+++ b/.github/workflows/update-downstream.yml
@@ -15,6 +15,15 @@ jobs:
       ref: master
     secrets:
       token: ${{ secrets.GIT_TOKEN }}
+  update-tools-splat-soy:
+    uses: ./.github/workflows/call-workflow-dispatch.yml
+    with:
+      repo-owner: prplecake
+      repo-name: tools.splat.soy
+      workflow-name: update-submodule.yml
+      ref: master
+    secrets:
+      token: ${{ secrets.GIT_TOKEN }}
   update-compostintraining:
     uses: ./.github/workflows/call-workflow-dispatch.yml
     with:
